2025-03-10 Gabriele Gorla <gorlik@yahoo.com>

    * src/mos6502/gen.c:
      Rewrite genrsh32.
      
2025-03-09 Gabriele Gorla <gorlik@yahoo.com>

    * src/z80/main.c,
      src/mos6502/main.c,
      src/hc08/main.c,
      src/SDCCglue.c,
      src/SDCCmem.h:
      Move port specific assembler directives to genAssemblerStart.

2025-03-09 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/stm8/gen.c,
	  src/f8/gen.c:
	  Fix bug #3841.

2025-03-08 Gabriele Gorla <gorlik@yahoo.com>

    * src/mos6502/gen.c:
      More cosmetic changes to match sdcc coding style.

2025-03-08 Benedikt Freisen <b.freisen AT gmx.net>

	* device/include/stdcountof.h,
	  doc/sdccman.lyx,
	  src/SDCC.lex,
	  src/SDCC.y,
	  src/SDCCast.c,
	  src/SDCCast.h,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCsymt.c,
	  src/SDCCsymt.h,
	  support/regression/tests/countof.c,
	  support/regression/tests/lengthof.c:
	  Rename _Lengthof to _Countof/countof (C2y, n3469, see RFE #978).

2025-03-04 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCralloc.hpp,
	  src/stm8/gen.c:
	  Improve some comments about the stm8 division hardware bug workaround.

2025-03-03 Gabriele Gorla <gorlik@yahoo.com>

    * src/mos6502/gen.c:
      Replace emitCpz with emitCmp. Replace label macros with functions.
      Fix bug in genRLC.
      Improve genCmp.

2025-03-02 Gabriele Gorla <gorlik@yahoo.com>

    * src/mos6502/gen.c:
      Improve genPlus, genMinus and genlsh16.
      Several cosmetic changes to match sdcc coding style.
      Rewrite genlsh32.

2025-02-28 Philipp Klaus Krause <philipp@colecovision.eu>

	* doc/sdccman.lyx:
	  Adjust C94/C95 support documentation.

2025-02-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* .version,
	  device/include/stdbit.h,
	  device/lib/__stdc_bit_ceilull.c,
	  device/lib/__stdc_first_leading_one.c,
	  device/lib/incl.mk,
	  device/lib/__stdc_bit_width.c,
	  device/lib/__stdc_count_ones.c,
	  device/lib/__stdc_first_trailing_one.c,