@@ -1,3 +1,8 @@
+2025-03-11 Gabriele Gorla <gorlik@yahoo.com>
+
+    * src/mos6502/gen.c:
+      Improve stack management.
+
 2025-03-10 Gabriele Gorla <gorlik@yahoo.com>
 
     * src/mos6502/gen.c:
